# libvgram

./: CMakeLists.txt  README.md
example/: CMakeLists.txt
example/mnist/: CMakeLists.txt  read_mnist.cpp  read_mnist.h  vgram_mnist.cpp
example/xor/: CMakeLists.txt  vgram_xor.cpp
include/: VgRamNeuron.h  util.h
include/wnn/: BitPattern.h  VgRamNeuron.h
python/: CMakeLists.txt  libwnn.i
src/: BitPattern.cpp  VgRamNeuron.cpp  util.cpp
